# Boreas

./: .gitignore  CHANGELOG.md  LICENSE  README.org  TODO  boreas.cabal  default.nix  flake.nix
.github/workflows/: haskell-ci.yml  nix-build.yaml
app/: Boreas_Network.hs  Boreas_Util.hs  Main.hs  Parse.hs
lib/: Boreas_Lib.hs  Boreas_Network.hs  Boreas_Util.hs  Parse.hs
