cabal-version:      3.0
name:               boreas
version:            0.0.1

synopsis:           Boreas is access control utility. 
description:	    Boreas is an access control utility.
		It can be used to create user accounts with automatic ssh-key 
		addition.  Boreas uses Github as its source for ssh public keys.

license:            BSD-2-Clause

license-file:       LICENSE

author:             Kyle Ackerman
maintainer:         kackerman0102@gmail.com

category:           Control
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md 

common warnings
    ghc-options: -Wall

executable boreas
    import:           warnings

    main-is:          Main.hs

    other-modules:    Parse , Boreas_Util

    build-depends:    base ^>=4.18.0.0
		    ,  curl >=1.3.8
                    ,  parsec >=3.1.17.0

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
